# PageIndex-UV

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  TODO.md  db.py  docker-compose.yml  main.py  pyproject.toml  server.py  test_smoke.py  web_config.py
.github/workflows/: test.yml
PageIndex/pageindex/: client.py  closet_index.py  super_tree.py
PageIndex/tests/: test_client_integration.py  test_docs_info.py  test_planner_unit.py  test_router.py  test_strategies_unit.py  test_super_tree.py  test_verifier_unit.py
app/: __init__.py  config_service.py  config_utils.py  main.py  server.py
deploy/: mcp-config.json
docs/: REGISTRY.md  architecture.md  mcp-tools.md  web-console-design-system.md
docs/release-notes/: v1.2.0.md
logs/: qa_20260213.jsonl  信息化管理制度.pdf_20260211_113734.json  网络安全管理办法.pdf_20260211_172922.json
pageindex_mutil/: __init__.py  chroma_backend.py  client.py  closet_index.py  config.yaml  entity_extractor.py  hybrid_backend.py  page_index.py  page_index_liteparse.py  page_index_md.py  reasoning.py  search_backend.py  super_tree.py  utils.py
pageindex_mutil/agentic/: planner.py  router.py  strategies.py  (+1 more)
scripts/: guard-no-hardcoded-model.sh
tests/: conftest.py  test_client_integration.py  test_config.py  test_db.py  test_db_concurrency.py  test_delete_path.py  test_docs_info.py  test_migrations.py  test_planner_unit.py  test_retrieve_model_wiring.py  test_router.py  test_search_backends.py  test_strategies_unit.py  test_super_tree.py  test_verifier_unit.py  test_web_console.py
web/: index.html
(+44 files in other folders)
